# CursedBot

./: .gitignore  Cargo.toml  Config.json.example  README.md  database.example.sqlite
assets/: Dhar-mann.json
src/: main.rs
src/commands/: config.rs  mod.rs  test.rs  util.rs
src/commands/fun/: dharmann.rs  memes.rs  mod.rs  random_song_recommendation.rs
src/commands/moderation/: ban.rs  kick.rs  mod.rs  softban.rs  timeout.rs
src/commands/rolemanagement/: addrole.rs  deleterole.rs  mod.rs  updaterole.rs
src/commands/xotd/: answer_qotd.rs  mod.rs  qotd_suggestion.rs  sotd_suggestion.rs
src/common/: builtins.rs  client.rs  color_conversion.rs  command_enable_checks.rs  database.rs  framework.rs  mod.rs  read_json.rs  structs.rs
src/events/: handler.rs
