[package]
name = "dumb_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.5"
roux = "2.2.12"
rspotify = "0.13.2"
serde = "1.0.204"
serde_json = "1.0.120"
serenity = "0.12.2"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.39.1", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.10.0", features = ["json"] }
